WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307817
REGRESSION (
307332@main
): Web process terminates due to invalid RemoteLayerTreeDrawingAreaProxy_CommitLayerTree IPC
https://bugs.webkit.org/show_bug.cgi?id=307817
Summary
REGRESSION (307332@main): Web process terminates due to invalid RemoteLayerTr...
Wenson Hsieh
Reported
2026-02-13 09:40:06 PST
rdar://170247986
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2026-02-13 09:45:03 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58637
EWS
Comment 2
2026-02-13 12:49:35 PST
Committed
307507@main
(0879c63cc17e): <
https://commits.webkit.org/307507@main
> Reviewed commits have been landed. Closing PR #58637 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug