REGRESSION (307332@main): Web process terminates due to invalid RemoteLayerTreeDrawingAreaProxy_CommitLayerTree IPC https://bugs.webkit.org/show_bug.cgi?id=307817 rdar://170247986

Reviewed by Lily Spiniolas.

Reorganize `ScrollingStateNodeProperty` to avoid all (unintended) overlapping enum values when
certain compile-time flags are enabled, by defining each enum value relative to the last value (or
exactly equal to one of the prior values, in the case where the overlap is intended).

Also, add `BannerViewHeight` to `WebCoreArgumentCoders.serialization.in` to ensure that it gets
properly serialized over IPC.

* Source/WebCore/page/scrolling/ScrollingStateNode.h:
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

Canonical link: https://commits.webkit.org/307507@main